--- a/css/styles.css
+++ b/css/styles.css
@@ -471,6 +471,7 @@ color:var(--primary-semigrey-color);}
                     } 
                   }
                 .modal-div {position: fixed;
+                    
                     top: 0;
                     left: 0;
                     width: 100%;
@@ -483,6 +484,7 @@ color:var(--primary-semigrey-color);}
                     pointer-events: none;
                 }
                 .modal-window {position: absolute;
+                    padding: 72px 24px 24px 24px;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%) scale(1);
@@ -493,6 +495,13 @@ color:var(--primary-semigrey-color);}
                     border-radius: 4px;
                     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
                 }
+                .modal-p {font-weight: 500;
+                    font-size: 16px;
+                    line-height: 1.5;
+                    text-align: center;
+                    letter-spacing: 0.02em;
+                color:#2E2F42;
+                margin-bottom: 16px;}
                 .modal-btn {position: absolute;
                     top: 24px;
                     right: 24px;
