--- a/css/styles.css
+++ b/css/styles.css
@@ -602,3 +602,10 @@ transition: transform 250ms ease-in-out;}
                         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     }
                     .input:focus {border-color: #4D5AE5;}
+                    .input-svg {position: absolute;
+                        left: 16px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+                    
+                    .input-svg:focus {fill: #4D5AE5;}
