--- a/css/styles.css
+++ b/css/styles.css
@@ -625,3 +625,8 @@ transition: transform 250ms ease-in-out;}
                         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
                         .textarea:focus {border-color: #4D5AE5;}
                         .modal-agree {margin-bottom: 24px;}
+                        .label-agree {font-size: 12px;
+                            line-height: 1.17;
+                            letter-spacing: 0.04em;
+                        color:#8e8f99;
+                    }
