--- a/css/styles.css
+++ b/css/styles.css
@@ -630,3 +630,33 @@ transition: transform 250ms ease-in-out;}
                             letter-spacing: 0.04em;
                         color:#8e8f99;
                     }
+                    .span-agree {width: 16px;
+                        height: 16px;
+                        border: 1px solid rgba(46, 47, 66, 0.4);
+                        border-radius: 2px;
+                        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                        display: inline-flex;
+                        align-items: center;
+                        justify-content: center;
+                        fill: transparent;}
+                        .input-agree:checked {background-color:var(--primary-focus-color);
+                            border: none;
+                        fill:var(--primary-semiwhite-color);}
+                        .a-agree {color: var(--primary-blue-color);
+                        }
+                        .button-agree {display: block;
+                            min-width: 169px;
+                            height: 56px;
+                            font-family: "Roboto", sans-serif;
+                            font-size: 16px;
+                            font-weight: 500;
+                            line-height: 1.5;
+                            letter-spacing: 0.04em;
+                            color: #ffffff;
+                            cursor: pointer;
+                            background-color: #4D5AE5;
+                            border: none;
+                            border-radius: 4px;
+                            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                            margin: 0 auto;
+                        }
