--- a/css/styles.css
+++ b/css/styles.css
@@ -544,6 +544,7 @@ transition: transform 250ms ease-in-out;}
                 font-weight: 400;
                 line-height: 24px;
                 letter-spacing: 0.32px;}
+                .subscribe {margin-left: 80px;}
                 .subscribe-p {margin-bottom: 16px;
                     font-weight: 500;
                     font-size: 16px;
@@ -582,6 +583,7 @@ transition: transform 250ms ease-in-out;}
                         border: none;
                         border-radius: 4px;
                     }
+                    .foot-btn:hover, .foot-btn:focus {background-color: #404bbf;}
                     .label-svg {margin-left: 16px;}
                     .form-div {margin-bottom: 8px;}
                     .modal-label {font-size: 12px;
@@ -660,3 +662,12 @@ transition: transform 250ms ease-in-out;}
                             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                             margin: 0 auto;
                         }
+                        .button-agree:hover, .button-agree:focus {background-color: #404bbf}
+                        .modal-h {font-family: 'Roboto', sans-serif;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 24px;
+                            letter-spacing: 0.32px;
+                            text-align: center;
+                        margin-bottom: 16px;}
