--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,9 @@ transition: transform 250ms ease-in-out;}
                     display: block;
                     margin-bottom: 4px;}
                     .input-div {position: relative;
+
                     }
+                    .input-div:focus-visible {outline: none;}
                     .input {width: 100%;
                         height: 40px;
                         border: 1px solid rgba(46, 47, 66, 0.4);
@@ -603,14 +605,17 @@ transition: transform 250ms ease-in-out;}
                         outline: transparent;
                         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                     }
-                    .input:focus {border-color: #4D5AE5;}
+                    .input:focus {border-color: #4D5AE5;
+                        
+                    }
                     .input-svg {position: absolute;
                         left: 16px;
                         top: 50%;
                         transform: translateY(-50%);
-                        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+                        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                            }
+                         
                     
-                    .input-svg:focus {fill: #4D5AE5;}
                     .modal-text {margin-bottom: 16px}
                     .textarea {width: 100%;
                         height: 120px;
@@ -641,7 +646,7 @@ transition: transform 250ms ease-in-out;}
                         align-items: center;
                         justify-content: center;
                         fill: transparent;}
-                        .input-agree:checked {background-color:var(--primary-focus-color);
+                        .input-agree:checked + .label-agree > .span-agree {background-color:var(--primary-focus-color);
                             border: none;
                         fill:var(--primary-semiwhite-color);}
                         .a-agree {color: var(--primary-blue-color);
@@ -662,6 +667,7 @@ transition: transform 250ms ease-in-out;}
                             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                             margin: 0 auto;
                         }
+                        .span-svg {}
                         .button-agree:hover, .button-agree:focus {background-color: #404bbf}
                         .modal-h {font-family: 'Roboto', sans-serif;
                             font-size: 16px;
@@ -671,3 +677,4 @@ transition: transform 250ms ease-in-out;}
                             letter-spacing: 0.32px;
                             text-align: center;
                         margin-bottom: 16px;}
+                        .input:focus + .input-svg {fill: #4D5AE5;}
